# multi-pipeline-log-analytics

./: .env.example  .gitignore  NoSQL26_ET_project_statement.txt  PARSING_SPEC.md  PHASE1_REPORT.md  Project_evaluation_guidelines_2026.txt  README.md  commands.txt  docker-compose.yml  pyproject.toml
sql/: schema.sql
src/: cli.py  loader.py  orchestrator.py
src/pipelines/: base.py
src/pipelines/hive/: etl_pipeline.py
src/pipelines/mongodb/: aggregations.py  etl_pipeline.py
src/pipelines/mr/: etl_pipeline.py  mapper.py  reducer.py
src/pipelines/pig/: etl_pipeline.py
src/reporting/: report.py
stats/: report_10k.txt  report_1M.txt  report_2M.txt  report_3M.txt  report_50K.txt
tests/: test_aggregations.py  test_batch_id.py  test_parsing.py
tools/: render_pdf.py
