[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nosql-etl-pipeline"
version = "0.1.0"
description = "Multi-pipeline ETL framework for NASA HTTP server logs (DAS 839 NoSQL)"
requires-python = ">=3.11"
dependencies = [
    "pymongo>=4.6",
    "psycopg2-binary>=2.9",
    "tabulate>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[project.scripts]
etl = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
